2007-03-31  Stuart Herring  <herring@lanl.gov>

	* emacs-lisp/sregex.el (sregexq): Doc fix.

2007-03-31  Markus Triska  <markus.triska@gmx.at>

	* flymake.el (flymake-err-line-patterns): Doc fix.

2007-03-30  Reiner Steib  <Reiner.Steib@gmx.de>

	* info.el (info-tool-bar-map): Use "exit" for Info-exit.  Move to
	the right.

2007-03-30  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-cmds.el (c-forward-to-nth-EOF-}): Fix EOB bug.

2007-03-30  Thien-Thi Nguyen  <ttn@gnu.org>

	* emacs-lisp/ewoc.el (ewoc--insert-new-node): Take additional arg DLL.
	Use it, passed in explicitly, instead of from the dynamic binding.
	(ewoc-create, ewoc-enter-before): Update to use new call sequence.

2007-03-30  Juanma Barranquero  <lekktu@gmail.com>

	* simple.el (blink-matching-open): When in minibuffer, don't
	search for a match inside the prompt.

2007-03-30  Nick Roberts  <nickrob@snap.net.nz>

	* tmm.el (tmm-menubar): Select the right menu item with the mouse.
	(tmm-prompt): Don't make the mouse user select the first menu
	item twice.

2007-03-30  Chong Yidong  <cyd@stupidchicken.com>

	* eshell/esh-proc.el (eshell/kill): Tweak regexp to recognize
	SIGUSR1 and SIGUSR2.

2007-03-29  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-read-internal): When reading file or dir, only override
	minibuffer-local-filename-completion-map, otherwise only override
	minibuffer-local-completion-map.

2007-03-29  Glenn Morris  <rgm@gnu.org>

	* complete.el (partial-completion-mode): Set PC-do-completion-end
	to nil after use.
	(PC-lisp-complete-symbol): Create and use a marker at `end',
	rather than using point-marker.

2007-03-28  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (next-error-highlight): Doc fix.
	(compose-mail): Revert 2007-03-19 change.

2007-03-28  Richard Stallman  <rms@gnu.org>

	* emacs-lisp/edebug.el (edebug-display): Don't go to
	edebug-outside-buffer if it is dead.

2007-03-28  Juanma Barranquero  <lekktu@gmail.com>

	* view.el (view-mode): Fix typos in docstring.
